home2-rest/deploy/staging/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: home-api
  labels:
    app: home-api
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  tls:
    - hosts:
        - staging.jtalk.me
      secretName: home-staging-certificate
  rules:
    - host: staging.jtalk.me
      http:
        paths:
          - path: /api/(.*)
            backend:
              serviceName: home-api
              servicePort: 80
